--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.gasu.flutter_rusp">
-   <application
-        android:label="flutter_rusp"
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
+        android:label="Расписание ГАСУ"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon"
+       android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
