--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,23 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  font_awesome_flutter: ^10.0.0
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
+  flutter_launcher_icons: ^0.13.0
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "icon/icon_rasp.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  windows:
+    generate: true
+    image_path: "icon/icon_rasp.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "icon/icon_rasp.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,6 +76,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 dependency_overrides:
   meta: 1.9.1
+  quiver: 3.2.1
 
 flutter:
 
